--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,10 @@ body {
 }
 
 header {
-    background-color: #CBF3FF;
-    height: 250px;
     position: relative;
-    padding: 0 20px;
+    width: 100%;
+    height: 250px;
+    background-color: #CBF3FF;
 }
 
 header h1 {
@@ -24,7 +24,6 @@ header h1 {
     position: absolute;
     top: 10px;
     right: 10px;
-    margin: 0;
 }
 
 .staircase {
@@ -60,34 +59,35 @@ header h1 {
 }
 
 #banner {
-    width: 1100px;
-    height: 250px;
-    position: relative;
-    margin: 0 auto; 
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 120px;
+    transform: translateY(-50%);
 }
 
 .ball {
-    width: 100px;
-    height: 100px;
+    width: 30px;
+    height: 30px;
     background-color: #80BBFF;
     border-radius: 50%;
     position: absolute;
-    top: 0;
-    left: 0;
-    animation: ballMove 4s linear infinite alternate;
+    top: -15px;
+    left: 220px;
+    animation: ballMove 2s linear infinite alternate;
 }
 
 @keyframes ballMove {
-    0% { left: 0; }
-    100% { left: calc(100% - 100px); }
+    0% { left: calc(20px + 200px); }
+    100% { left: calc(100% - 50px); }
 }
 
 .spinner {
-    width: 100px;
-    height: 100px;
+    width: 30px;
+    height: 30px;
     background-color: #4CAF50;
     position: absolute;
-    top: 85px;
+    top: 80px;
     left: 50%;
     transform: translateX(-50%);
     animation: rotate 3s linear infinite;
@@ -106,18 +106,18 @@ header h1 {
 .triangle {
     width: 0;
     height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 100px solid #FFD700;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 40px solid #FFD700;
     position: absolute;
-    top: 170px;
-    right: 0;
-    animation: triangleMove 4s linear infinite alternate;
+    top: 120px;
+    right: 310px;
+    animation: triangleMove 2s linear infinite alternate;
 }
 
 @keyframes triangleMove {
-    0% { right: 0; }
-    100% { right: calc(100% - 100px); }
+    0% { right: calc(70px + 200px); }
+    100% { right: calc(100% - 50px); }
 }
 
 .columns {
@@ -202,6 +202,7 @@ footer a {
 footer a:hover {
     color: #4CAF50;
 }
+
 
 
 
