--- a/Journal/styles.css
+++ b/Journal/styles.css
@@ -5,6 +5,13 @@ body {
     color: #333;
 }
 
+img {
+    max-width: 400px;  
+    height: auto;     
+    display: block;   
+    margin: 0 auto;   
+  }
+
 .container {
     max-width: 1200px;
     min-width: 800px;
